10586
I log the intervention when dealiasing. In the SI-7753 case, we see
{code}
[log typer] InstantiateDependentMap recycling foo.Out: Int
[log typer] InstantiateDependentMap recycling foo.Out: Int
[log typer] InstantiateDependentMap recycling converted.instance.Out: Int
[log typer] InstantiateDependentMap recycling converted.instance.Out: Int
[log typer] InstantiateDependentMap recycling converted.instance.Out: Int
[log typer] InstantiateDependentMap recycling foo.Out: Int
[log typer] InstantiateDependentMap recycling foo.Out: Int
b.scala:26: error: type mismatch;
 found   : Int(23)
 required: si.instance.Out
    val v2: Int = indirect(conv(foo))(23)  // Fails.
                                      ^
b.scala:26: error: type mismatch;
 found   : si.instance.Out
 required: Int
    val v2: Int = indirect(conv(foo))(23)  // Fails.
                          ^
two errors found
{code}
In this ticket's test case, we see
{code}
[log typer] InstantiateDependentMap recycling p.package.SubAlias[tc.type]: p.ViewEnv[tc.A]#SubView
[log typer] InstantiateDependentMap recycling p.package.SubAlias[tc.type]: p.ViewEnv[tc.A]#SubView
[log typer] InstantiateDependentMap recycling p.package.SubAlias[tc.type]: p.ViewEnv[tc.A]#SubView
[log typer] InstantiateDependentMap recycling p.package.SubAlias[tc.type]: p.ViewEnv[tc.A]#SubView
[log typer] InstantiateDependentMap recycling p.package.SubAlias[tc.type]: p.ViewEnv[tc.A]#SubView
[log typer] InstantiateDependentMap recycling p.package.SubAlias[tc.type]: p.ViewEnv[tc.A]#SubView
[log typer] InstantiateDependentMap recycling p.package.intArrayTC.A: Int
{code}
